# esp-network

./: .gitignore  Dockerfile  LICENSE  readme.md
.forgejo/workflows/: build.yaml
.github/workflows/: rust_ci.yml
controller/: Cargo.toml
controller/src/: main.rs
idf-controller/: Cargo.toml  util.sh
idf-controller/.devcontainer/: devcontainer.json
idf-controller/docs/: README.md
idf-controller/scripts/: flash.sh
idf-controller/src/: main.rs
receiver/: Cargo.toml
receiver/src/: main.rs  util.rs
